Fixed z-index issue where a Boolean is higher than the row actions

--- a/wwwroot/web-components/query-grid/cell-templates/query-grid-cell-boolean.scss
+++ b/wwwroot/web-components/query-grid/cell-templates/query-grid-cell-boolean.scss
@@ -8,6 +8,10 @@
         line-height: var(--vi-query-grid-row-height);
     }
 
+    > vi-icon {
+        position: unset;
+    }
+
     &[is-app-sensitive][sensitive] {
         filter: blur(5px);
     }
